--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,12 @@
           <a href="/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
+          <!-- ADD NAVIGATION MENU -->
+          <nav id="main-nav">
+            <a href="/">Inicio</a>
+            <a href="/posts">Posts</a>
+          </nav>
+
           {% if site.show_downloads %}
             <section id="downloads">
               <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
