--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,14 +1,18 @@
 <nav class="toc">
   {% assign headers = include.html | split: '<h' %}
-  <ul>
-    {% for header in headers %}
-      {% if header contains 'id=' %}
-        {% assign first = header | split: '>' | first %}
-        {% assign hlevel = first | replace: '"', '' | replace: "'", "" | split: 'id=' %}
-        {% assign hid = hlevel[1] | split: ' ' | first %}
-        {% assign htext = header | split: '</h' | first | split: '>' | last | strip_html %}
-        <li><a href="#{{ hid }}">{{ htext }}</a></li>
-      {% endif %}
-    {% endfor %}
-  </ul>
+  {% for header in headers %}
+    {% if header contains 'id=' %}
+      {% assign level = header | slice: 0 | plus: 0 %}
+      {% assign level_offset = level | minus: 1 %}
+      {% assign padding_value = level_offset | times: 20 %}
+      {% assign first = header | split: '>' | first %}
+      {% assign hlevel = first | replace: '"', '' | replace: "'", "" | split: 'id=' %}
+      {% assign hid = hlevel[1] | split: ' ' | first %}
+      {% assign htext = header | split: '</h' | first | split: '>' | last | strip_html %}
+      
+      <div class="toc-item" data-level="{{ level }}">
+        <a href="#{{ hid }}">{{ htext }}</a>
+      </div>
+    {% endif %}
+  {% endfor %}
 </nav>
