--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
           <a href="/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-          <!-- ADD NAVIGATION MENU -->
+          <!-- NAVIGATION MENU -->
           <nav id="main-nav">
             <a href="/">Inicio</a>
             <a href="/posts">Posts</a>
