--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,72 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
 
-<div class="post-container">
-  <aside class="post-sidebar">
-    <h3>Publicaciones</h3>
-    <ul>
-      {% for post in site.posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </aside>
-  
-  <article class="post-content">
-    <h1>{{ page.title }}</h1>
-    
-    <div class="toc-container">
-      <strong>Contenidos</strong>
-      {% include toc.html html=content %}
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% seo %}
+    {% include head-custom.html %}
+  </head>
+
+  <body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          {% if site.github.is_project_page %}
+            <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          {% endif %}
+
+          <a href="/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
+          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          
+          <!-- NAVIGATION MENU -->
+          <nav id="main-nav">
+            <a href="/">Inicio</a>
+            <a href="/posts">Posts</a>
+          </nav>
+        </header>
     </div>
-    
-    {{ content }}
-  </article>
-</div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner post-layout">
+        <div class="post-container">
+          <aside class="posts-sidebar">
+            <h3>Publicaciones</h3>
+            <ul>
+              {% for post in site.posts %}
+                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </aside>
+          
+          <div class="post-content-container">
+            <article class="post-content">
+              <h1>{{ page.title }}</h1>
+              {{ content }}
+            </article>
+            
+            <aside class="toc-sidebar">
+              <div class="toc-container">
+                <strong>Contenidos</strong>
+                {% include toc.html html=content %}
+              </div>
+            </aside>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- FOOTER -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        {% if site.github.is_project_page %}
+        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+  </body>
+</html>
