--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,12 @@
           
           <div class="post-content-container">
             <article class="post-content">
+              <div class="post-categories">
+                {% for category in page.categories %}
+                  <span class="category-tag">{{ category }}</span>
+                {% endfor %}
+              </div>
+              
               <h1>{{ page.title }}</h1>
               {{ content }}
             </article>
