--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -675,6 +675,29 @@ Small Device Styles
   display: inline-block;
 }
 
+/* Añadir esto en la sección de estilos de categorías */
+#categories-list a.active {
+  font-weight: bold;
+  color: #0F79D0;
+  text-decoration: underline;
+}
+
+/* Mejorar el hover para categorías */
+#categories-list a:hover {
+  color: #0F79D0;
+  text-decoration: underline;
+}
+
+/* Ajustar los enlaces de categorías en los posts */
+.post-categories .category-tag a {
+  color: #555;
+  text-decoration: none;
+}
+
+.post-categories .category-tag a:hover {
+  color: #0F79D0;
+}
+
 /* En el layout del post */
 .post-content .post-categories {
   margin-bottom: 15px;
